# goszakupki-bot

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  keywords.txt  pyproject.toml
prompts/: analysis_prompts.json  extract.md
scripts/: download_models.py  update-and-run.sh  update_and_run.sh
src/: app.py  config.py  config_llm.py  di.py  logging_config.py
src/db/: models.py  repo.py
src/llm/: client.py  enhanced_client.py  prompt_manager.py
src/monitor/: analysis_pipeline.py  analysis_types.py  classification.py  deepseek_balance.py  deepseek_balance_scheduler.py  detail_llm_integration.py  detail_scheduler.py  detail_service.py  embedding_service.py  joke_scheduler.py  joke_service.py  jokes.py  keyword_registry.py  llm_resolver.py  match.py  ollama_client.py  rules_matcher.py  scheduler.py  semantic.py  semantic_matcher.py  service.py  text_normalization.py  text_normalizer.py  topic_seed.py  weekly_report_scheduler.py  weekly_report_service.py
src/provider/: base.py  goszakupki_http.py  goszakupki_pw.py  icetrade_http.py
src/semantic/: __init__.py
src/tg/: auth_middleware.py  auth_state.py  bot.py  handlers.py  keyboards.py
src/util/: clean_html.py  signals.py  timeparse.py
tests/: conftest.py
tests/monitor/: test_classification.py  test_deepseek_balance.py  test_detail_service.py  test_local_analysis.py  test_text_normalization.py
tests/semantic/: test_analyzer.py
tools/: test_llm_extraction.py
