[tool.poetry]
name = "goszakupki-bot"
version = "0.1.0"
description = "Telegram bot for monitoring goszakupki.by tenders"
authors = ["AI Assistant <assistant@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10"
APScheduler = "^3.10"
SQLAlchemy = "^2.0"
aiohttp = "^3.10"
beautifulsoup4 = "^4.12"
lxml = "^5.3"
python-dotenv = "^1.0"
orjson = "^3.10"
aiosqlite = "^0.20"
certifi = "^2024.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
